src/test/ui/rust-2018/uniform-paths/prelude-fail-2.stderr
error: cannot use a built-in attribute through an import
  --> $DIR/prelude-fail-2.rs:8:3
   |
LL | #[imported_inline] //~ ERROR cannot use a built-in attribute through an import
   |   ^^^^^^^^^^^^^^^
   |
note: the built-in attribute imported here
  --> $DIR/prelude-fail-2.rs:6:5
   |
LL | use inline as imported_inline;
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to previous error

